--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -29,7 +29,7 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="LAx-WI-GxA" userLabel="Login/Sign-Up">
-                                <rect key="frame" x="87" y="298" width="200" height="70"/>
+                                <rect key="frame" x="87.5" y="298.5" width="200" height="70"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5r-3e-b33">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
@@ -54,6 +54,9 @@
                                         <state key="normal" title="Sign-Up">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="uSI-V2-9PN" kind="show" id="XwZ-mn-rzh"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -152,14 +155,14 @@
                                     <constraint firstAttribute="width" constant="275" id="ZZk-Ll-Qld"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Email-icon" translatesAutoresizingMaskIntoConstraints="NO" id="9fa-28-7CA">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Emailicon" translatesAutoresizingMaskIntoConstraints="NO" id="9fa-28-7CA">
                                 <rect key="frame" x="167.5" y="338" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="Nwj-7e-3N9"/>
                                     <constraint firstAttribute="height" constant="40" id="tXk-y5-iJJ"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone-512" translatesAutoresizingMaskIntoConstraints="NO" id="jN6-fd-hoy">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone512" translatesAutoresizingMaskIntoConstraints="NO" id="jN6-fd-hoy">
                                 <rect key="frame" x="167.5" y="456" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="8Pd-hU-sIH"/>
@@ -186,7 +189,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile-icon-9" translatesAutoresizingMaskIntoConstraints="NO" id="rwz-vp-c0D">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileicon9" translatesAutoresizingMaskIntoConstraints="NO" id="rwz-vp-c0D">
                                 <rect key="frame" x="167.5" y="220" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="8PJ-8c-TmQ"/>
@@ -226,6 +229,9 @@
                                 <state key="normal" title="Sign-Up">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="SLm-TJ-fxV" kind="show" id="Xg2-P5-bhx"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -308,20 +314,63 @@
                                     <constraint firstAttribute="width" constant="150" id="tk3-UU-H8R"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Gq-1H-fwA">
-                                <rect key="frame" x="67" y="261" width="240" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Gq-1H-fwA">
+                                <rect key="frame" x="67" y="243" width="240" height="40"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileicon9" translatesAutoresizingMaskIntoConstraints="NO" id="dDY-aw-WMo">
+                                        <rect key="frame" x="8" y="5" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="2Vr-JD-Puf"/>
+                                            <constraint firstAttribute="width" constant="30" id="Xid-ml-ieO"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dv1-Hs-F0n">
+                                        <rect key="frame" x="46" y="5" width="186" height="30"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.40443294759999998" green="0.83409646599999998" blue="0.88384175409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="dDY-aw-WMo" secondAttribute="bottom" constant="5" id="2RB-Qf-IN8"/>
+                                    <constraint firstItem="dDY-aw-WMo" firstAttribute="top" secondItem="7Gq-1H-fwA" secondAttribute="top" constant="5" id="8Ax-6Y-4SH"/>
+                                    <constraint firstAttribute="trailing" secondItem="Dv1-Hs-F0n" secondAttribute="trailing" constant="8" id="FSf-ul-8Ga"/>
+                                    <constraint firstAttribute="bottom" secondItem="Dv1-Hs-F0n" secondAttribute="bottom" constant="5" id="OJo-bz-kUT"/>
+                                    <constraint firstItem="Dv1-Hs-F0n" firstAttribute="top" secondItem="7Gq-1H-fwA" secondAttribute="top" constant="5" id="YCr-K1-g6n"/>
+                                    <constraint firstItem="Dv1-Hs-F0n" firstAttribute="leading" secondItem="dDY-aw-WMo" secondAttribute="trailing" constant="8" id="cHb-fg-w90"/>
+                                    <constraint firstAttribute="width" constant="240" id="etf-QY-5Nr"/>
+                                    <constraint firstAttribute="height" constant="40" id="fT0-KF-59X"/>
+                                    <constraint firstItem="dDY-aw-WMo" firstAttribute="leading" secondItem="7Gq-1H-fwA" secondAttribute="leading" constant="8" id="wLV-AN-hpg"/>
+                                </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X1X-Gf-2DW">
+                                <rect key="frame" x="67" y="291" width="240" height="40"/>
+                                <color key="backgroundColor" red="0.40443294759999998" green="0.83409646599999998" blue="0.88384175409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="3Sq-Gg-pno"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="sn1-1F-mwH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="mjS-BA-YWF" firstAttribute="top" secondItem="XxF-nq-YAO" secondAttribute="bottom" constant="8" id="35I-go-Am0"/>
+                            <constraint firstAttribute="trailing" secondItem="X1X-Gf-2DW" secondAttribute="trailing" constant="68" id="3C3-vs-FIH"/>
+                            <constraint firstItem="X1X-Gf-2DW" firstAttribute="centerX" secondItem="zxX-Qb-Axe" secondAttribute="centerX" id="AY0-dw-m1m"/>
                             <constraint firstAttribute="trailing" secondItem="mjS-BA-YWF" secondAttribute="trailing" constant="113" id="GCp-b8-kRo"/>
+                            <constraint firstItem="X1X-Gf-2DW" firstAttribute="leading" secondItem="zxX-Qb-Axe" secondAttribute="leading" constant="67" id="OGA-Wj-LwV"/>
+                            <constraint firstItem="7Gq-1H-fwA" firstAttribute="centerX" secondItem="mjS-BA-YWF" secondAttribute="centerX" id="Oiy-Xh-WzQ"/>
                             <constraint firstItem="xyz-VV-4ca" firstAttribute="top" secondItem="zxX-Qb-Axe" secondAttribute="top" id="WK9-ch-Yjb"/>
                             <constraint firstItem="xyz-VV-4ca" firstAttribute="leading" secondItem="zxX-Qb-Axe" secondAttribute="leading" id="Xd8-cR-g91"/>
                             <constraint firstAttribute="trailing" secondItem="xyz-VV-4ca" secondAttribute="trailing" id="eEf-1K-4RX"/>
+                            <constraint firstItem="7Gq-1H-fwA" firstAttribute="top" secondItem="xyz-VV-4ca" secondAttribute="bottom" constant="43" id="kET-K5-DUN"/>
                             <constraint firstItem="mjS-BA-YWF" firstAttribute="leading" secondItem="zxX-Qb-Axe" secondAttribute="leading" constant="112" id="sDf-yA-xeg"/>
+                            <constraint firstItem="X1X-Gf-2DW" firstAttribute="top" secondItem="7Gq-1H-fwA" secondAttribute="bottom" constant="8" id="tcF-pe-c5g"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -331,9 +380,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Email-icon" width="512" height="512"/>
+        <image name="Emailicon" width="512" height="512"/>
         <image name="newroomies" width="585" height="717"/>
-        <image name="phone-512" width="512" height="512"/>
-        <image name="profile-icon-9" width="512" height="512"/>
+        <image name="phone512" width="512" height="512"/>
+        <image name="profileicon9" width="512" height="512"/>
     </resources>
 </document>
